* 0890961 
|  2015-08-17 
|  Kostya Zolotarov 
|  Migrated from settings to configuration notation (HEAD -> development, origin/development, origin/HEAD) 
|  
* c9d6683 
|  2015-08-14 
|  Kostya Zolotarov 
|  Added filecetera notation bash templates 
|  
* e612bfd 
|  2015-08-11 
|  Kostya Zolotarov 
|  Added srcmod frontend 
|  
* bb54896 
|  2015-08-09 
|  Kostya Zolotarov 
|  Refactored source module descriptors and templates 
|  
* 4cc05a9 
|  2015-08-09 
|  Kostya Zolotarov 
|  Added design notes; Started package tool 
|  
* 2f6df00 
|  2015-08-08 
|  Kostya Zolotarov 
|  Enabled templates initialization 
|  
* 88dddea 
|  2015-07-29 
|  Kostya Zolotarov 
|  Reorganized templates and changed FILES teplate sequence 
|  
* acfb85c 
|  2015-07-29 
|  Kostya Zolotarov 
|  Added API template 
|  
* 37760d1 
|  2015-07-29 
|  Kostya Zolotarov 
|  Refactored information log type 
|  
* abfe891 
|  2015-07-28 
|  Kostya Zolotarov 
|  Refactored logging library out into a separate source module 
|  
* 1406879 
|  2015-07-16 
|  Kostya Zolotarov 
|  Added index file formatting 
|  
* f7f4fb3 
|  2015-07-14 
|  Kostya Zolotarov 
|  New file indexing algorithm 
|  
* 25b6b23 
|  2015-07-13 
|  Kostya Zolotarov 
|  Fixed VERSION file not found error 
|  
* f1440b3 
|  2015-07-10 
|  Kostya Zolotarov 
|  Library for 'files' command 
|  
* 041cc88 
|  2015-07-10 
|  Kostya Zolotarov 
|  Added list of features 
|  
* 42eee1d 
|  2015-07-10 
|  Kostya Zolotarov 
|  Updated background 
|  
* 720f956 
|  2015-07-10 
|  Kostya Zolotarov 
|  Enabled empty VERSION initialization 
|  
* 29121e1 
|  2015-07-10 
|  Kostya Zolotarov 
|  Added file library 
|  
* 68ce5f4 
|  2015-07-10 
|  Kostya Zolotarov 
|  Added version library 
|  
* e33ebee 
|  2015-07-09 
|  Kostya Zolotarov 
|  Enabled aliasing for srcmod commands 
|  
* a3202a9 
|  2015-07-09 
|  Kostya Zolotarov 
|  Added install/uninstall commands to general toolkit; Install/uninstall can now handle other source modules 
|  