@@ -5,7 +5,7 @@ modules.
 
 [2] VERSION ------------------------------------------------------------------
 
-0.0.3.2
+0.0.3.3
 
 [3] AUTHORS ------------------------------------------------------------------
 
@@ -78,7 +78,6 @@ similar to the following file structure:
 |--  ./FILES
 |--  ./install
 |--  ./INSTALL
-|--  ./library.version.sh
 |--  ./LICENSE
 |--  ./package
 |--  ./readme
@@ -100,7 +99,7 @@ similar to the following file structure:
 |--  ./version
 \--  ./VERSION
 
-40 files
+39 files
 
 [7] DESIGN -------------------------------------------------------------------
 
@@ -206,10 +205,15 @@ Presently, I have one active branch:
 
 [10] CHANGELOG ---------------------------------------------------------------
 
+* 91a45f9 
+|  2015-08-18 
+|  Kostya Zolotarov 
+|  Switched to library.file.sh (HEAD -> development, origin/development, origin/HEAD) 
+|  
 * 0890961 
 |  2015-08-17 
 |  Kostya Zolotarov 
-|  Migrated from settings to configuration notation (HEAD -> development, origin/development, origin/HEAD) 
+|  Migrated from settings to configuration notation 
 |  
 * c9d6683 
 |  2015-08-14 
