@@ -31,7 +31,7 @@ SOFTWARE.
 . ~/.srcmod             # https://github.com/kz9676/srcmod
 . library.log.sh        # https://github.com/kz9676/library.log.sh
 . library.file.sh       # https://github.com/kz9676/library.file.sh
-. library.version.sh
+. library.version.sh    # https://github.com/kz9676/library.version.sh
 
 version_file_name=VERSION
 version_file_path=. 
